src/App.css
/* ... */
@font-face {
  font-family: 'BodoniModa';
  src: url('./Fonts/BodoniModa-VariableFont_opsz,wght.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CroissantOne';
  src: url('./Fonts/CroissantOne-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Gabriele';
  src: url('./Fonts/gabriele-bad.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'NK57';
  src: url('./Fonts/NK57\ Monospace\ Cd\ Rg.otf') format('opentype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Bayon';
  src: url('./Fonts/Bayon-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CormorantSC';
  src: url('./Fonts/CormorantSC-Bold.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

